--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,12 @@
     "name": "imwecn/imwe-core",
     "description": "The imwe-core Package",
     "license": "Apache-2.0",
+    "repositories": [  
+        {  
+            "type": "git",  
+            "url":  "https://github.com/imwecn/imwe-core.git"  
+        }  
+    ],
     "authors": [
         {
             "name": "guojoa",
